--- a/css/general.css
+++ b/css/general.css
@@ -114,6 +114,10 @@ html {
   margin-right: 1.6rem !important;
 }
 
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
 .container {
   max-width: 120rem;
   padding: 0 3.2rem;
