--- a/css/style.css
+++ b/css/style.css
@@ -504,3 +504,35 @@
   margin-bottom: 4.8rem;
   margin-top: 3.2rem;
 }
+
+/* ************************************** */
+/* FEATURE SECTION */
+/* ************************************** */
+
+.pllan-detials {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.feature-icon {
+  color: #e67e22;
+  height: 2.4rem;
+  width: 2.4rem;
+  margin-bottom: 3.2rem;
+  background-color: #fdf2e9;
+  padding: 1.6rem;
+  border-radius: 50%;
+}
+
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
