--- a/css/general.css
+++ b/css/general.css
@@ -55,6 +55,7 @@ html {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -63,6 +64,9 @@ html {
   padding: 1.6rem 3.2rem;
   border-radius: 1.5rem;
   font-weight: 600;
+
+  border: none;
+  cursor: pointer;
 
   /* transition: background-color 0.3s; */
   transition: all 0.3s;
@@ -89,8 +93,21 @@ html {
 .btn--outlined:active {
   background-color: #fdf2e9;
   /* border: 3px solid #fff; */
+
   /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -152,4 +169,30 @@ html {
 
 .center--text {
   text-align: center;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  padding: 0;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
